Fix Accessibility Errors

--- a/huddle-landing-page-with-single-introductory-section-master/index.html
+++ b/huddle-landing-page-with-single-introductory-section-master/index.html
@@ -60,16 +60,19 @@
 
     <ul class="SocialMedia">
       <li>
-        <a href="https://www.facebook.com/">
+        <a target="_blank" href="https://www.facebook.com/">
           <i class="fab fa-facebook-f"></i>
+          <span style="display: none;">Facebook</span>
         </a>
         <li>
-          <a href="https://twitter.com/">
+          <a target="_blank" href="https://twitter.com/">
             <i class="fab fa-twitter"></i>
+            <span style="display: none;">Twitter</span>
           </a>
           <li>
-            <a href="http://instagram.com/">
+            <a target="_blank" href="http://instagram.com/">
               <i class="fab fa-instagram"></i>
+              <span style="display: none;">Instagram</span>
             </a>
       </li>
     </ul>
