--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -13,14 +13,14 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="http://alcs-four-card.netlify.app/>
+  <meta property="og:url" content="http://alcs-four-card.netlify.app/">
   <meta property="og:title" content="Four card feature section">
   <meta property="og:description" content="A nice layout-based challenge for beginners. This will test anyone who is new to multi-column and responsive layouts.">
   <meta property="og:image" content="http://alcs-four-card.netlify.app/design/desktop-preview.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="http://alcs-four-card.netlify.app/>
+  <meta property="twitter:url" content="http://alcs-four-card.netlify.app/">
   <meta property="twitter:title" content="Four card feature section">
   <meta property="twitter:description" content="A nice layout-based challenge for beginners. This will test anyone who is new to multi-column and responsive layouts.">
   <meta property="twitter:image" content="http://alcs-four-card.netlify.app/design/desktop-preview.jpg">
@@ -40,7 +40,7 @@
       to ensure that your project is successful</p>
 
     <section>
-
+      <h2 class="art">Articles</h2>
       <article>
         <h2>Supervisor</h2>
         <p>Monitors activity to identify project roadblocks</p>
